--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <div class="envelope-body">
                     <div class="envelope-letter">
                         <p>💌</p>
-                        <p id="letter-message"> <p>The moon has been following me all night, but it still can’t compete with you.</p>❤️</p>
+                        <p id="letter-message"> <p>The moon has been following me all night, like it's trying to remind me of you.</p>❤️</p>
                                                 <!-- Butterflies animation removed -->
                         <!-- Teddy and bubble, hidden by default -->
                         <div class="teddy-container" id="teddy-container" style="display: none;">
@@ -334,7 +334,7 @@
         // Gift and Quote button handlers
         if (giftBtn && quoteBtn) {
             giftBtn.onclick = function() {
-                showSimplePopup('text me if you are free on Monday or any other day 🎁');
+                showSimplePopup('Text me if you are free on Monday or any other day 🎁');
             };
             quoteBtn.onclick = function() {
                 showSimplePopup(
